# landing-page-brief-builder

./: .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
ai-landing-brief-builder/landing-brief-builder/: README.md  app.py
ai-landing-brief-builder/landing-brief-builder/landing_builder/: __init__.py  app_factory.py
ai-landing-brief-builder/landing-brief-builder/landing_builder/api/: dependencies.py  errors.py
ai-landing-brief-builder/landing-brief-builder/landing_builder/domain/: __init__.py  models.py
ai-landing-brief-builder/landing-brief-builder/landing_builder/services/: page_composer.py
ai-landing-brief-builder/landing-brief-builder/landing_builder/storage/: __init__.py  page_repository.py
ai-landing-brief-builder/landing-brief-builder/static/: app.js  index.html
ai-landing-brief-builder/landing-brief-builder/tests/: test_api.py  test_page_composer.py  test_repository.py
docs/: engineering-decisions.md
landing_builder/: config.py
landing_builder/api/: __init__.py  routes.py
landing_builder/domain/: schemas.py
landing_builder/services/: __init__.py
landing_builder/templates/: preview.html
static/: styles.css
tests/: conftest.py
