[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landing-brief-builder"
version = "2.3.0"
description = "FastAPI + Vanilla JS app for building draft landing pages with preview and revision-aware updates"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.110,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.7,<3.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<0.9",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N"]
ignore = ["B008", "E402", "E501"]
